[package]
name = "deimour"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serenity = "0.12"
serde_json = "1"
sysinfo = "0.21.2"
colored = "2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15.0"
songbird = { version = "0.4.0-rc-2" }
dashmap = "6.1.0"

[dependencies.lavalink-rs]
version = "0.13"
default-features = false
features = ["songbird", "serenity", "native-tls", "macros"]

